--- a/index.html
+++ b/index.html
@@ -15,21 +15,78 @@
   --line:#000000;          /* 罫線（黒） */
 }
 
-/* 右側の追従ナビ */
-.side-nav{
-  position:fixed;right:-5px;top:80%;
-  transform:translateY(-50%) translateX(15px);
-  background:var(--base);
-  display:flex;flex-direction:column;align-items:center;
-  padding:4px;border-radius:10px 0 0 10px;z-index:1000;width:35px
-}
-.side-nav a{display:flex;flex-direction:column;align-items:center;justify-content:center;
-  color:var(--gold);text-decoration:none;font-size:10px;margin:5px 0;padding:5px;
-  transition:background .3s,transform .2s;border-radius:5px;width:30px;height:30px;text-align:center}
-.side-nav a:active{transform:scale(1.0)}
-.side-nav a:hover{background:rgba(212,175,55,.12)}
-.side-nav a span{font-size:24px;position:absolute;left:2px;top:13px}
-@media (max-width:600px){.side-nav{right:2px;width:30px}.side-nav a{width:28px;height:28px}.side-nav a i{font-size:12px}}
+        /* 右端の細いナビ（固定） */
+        .side-nav {
+            position: fixed;
+            /* 画面スクロールしても固定 */
+            right: -5px;
+            /* さらに右へ */
+            top: 80%;
+            /* 画面中央に固定 */
+            transform: translateY(-50%) translateX(10px);
+            /* 中央配置と右ずらし */
+            background: #13ca5e;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 4px;
+            border-radius: 10px 0 0 10px;
+            z-index: 1000;
+            width: 35px;
+            /* さらに細く */
+        }
+
+        .side-nav a:active {
+            transform: scale(1.0);
+            /* タップした後に元のサイズに戻す */
+        }
+
+        .side-nav a {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            color: white;
+            text-decoration: none;
+            font-size: 10px;
+            margin: 5px 0;
+            padding: 5px;
+            transition: background 0.3s, transform 0.2s;
+            border-radius: 5px;
+            width: 30px;
+            height: 30px;
+            text-align: center;
+        }
+
+        .side-nav a span {
+            font-size: 24px;
+            /* 矢印をさらに大きく */
+            position: absolute;
+            left: 2px;
+            /* 左端に寄せる */
+            top: 13px;
+            /* さらに下へ */
+        }
+
+        /* スマホ用の微調整 */
+        @media (max-width: 600px) {
+            .side-nav {
+                right: 2px;
+                /* スマホではさらに右端に */
+                width: 30px;
+                /* もっと細く */
+            }
+
+            .side-nav a {
+                width: 28px;
+                height: 28px;
+            }
+
+            .side-nav a i {
+                font-size: 12px;
+                /* スマホではもっと小さく */
+            }
+        }
 
 /* ベース */
 body{
