--- a/index.html
+++ b/index.html
@@ -469,9 +469,9 @@
                 <span class="highlight-text">◆おがくず酵素風呂◆</span>
             </div>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this, 'treatment1')" data-price="15000">おかくず酵素風呂温浴</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment2')" data-price="15000">おかくず酵素風呂ペア温浴</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment3')" data-price="15000">貸し切りおかくず酵素風呂温浴</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment1')" data-price="15000">おがくず酵素風呂温浴</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment2')" data-price="15000">おがくず酵素風呂ペア温浴</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment3')" data-price="15000">貸し切りおがくず酵素風呂温浴</button>
             </div>
             <div class="highlight-background">
                 <span class="highlight-text">オプション</span>
@@ -572,11 +572,11 @@
             </div>
             <div class="symptoms">
                 <div class="info-text">※お一つのみご選択いただけます</div>
-                <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="15000">おかくず酵素風呂温浴<br>＋<br>メディカルチネイザン</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment9')" data-price="15000">おかくず酵素風呂温浴<br>＋<br>オイルリンパマッサージ</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="15000">おかくず酵素風呂温浴<br>＋<br>WINBACK施術</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment9')" data-price="15000">おかくず酵素風呂温浴<br>＋<br>ヨガ</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment9')" data-price="15000">おかくず酵素風呂温浴<br>＋<br>TRXサスペンショントレーニング</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="15000">おがくず酵素風呂温浴<br>＋<br>メディカルチネイザン</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment9')" data-price="15000">おがくず酵素風呂温浴<br>＋<br>オイルリンパマッサージ</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="15000">おがくず酵素風呂温浴<br>＋<br>WINBACK施術</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment9')" data-price="15000">おがくず酵素風呂温浴<br>＋<br>ヨガ</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment9')" data-price="15000">おがくず酵素風呂温浴<br>＋<br>TRXサスペンショントレーニング</button>
             </div>
         </div>
 
@@ -681,9 +681,9 @@ let irradiationsTimes = {
         let selectedirradiationsTime = 0; // 訪問回数で選択された時間
 
         let menuTimes = {
-            'おかくず酵素風呂温浴': 60,
-            'おかくず酵素風呂ペア温浴': 90,
-            '貸し切りおかくず酵素風呂温浴': 90,
+            'おがくず酵素風呂温浴': 60,
+            'おがくず酵素風呂ペア温浴': 90,
+            '貸し切りおがくず酵素風呂温浴': 90,
             'メディカルチネイザン': 70,
             'オイルリンパマッサージ': 70,
             'WINBACK施術（部位別30分）': 30,
@@ -695,11 +695,11 @@ let irradiationsTimes = {
             'WINBACK施術': 30,
             'ヨガ': 70,
             'TRXサスペンショントレーニング': 70,
-            'おかくず酵素風呂温浴＋メディカルチネイザン': 120,
-            'おかくず酵素風呂温浴＋オイルリンパマッサージ': 120,
-            'おかくず酵素風呂温浴＋WINBACK施術': 120,
-            'おかくず酵素風呂温浴＋ヨガ': 120,
-            'おかくず酵素風呂温浴＋TRXサスペンショントレーニング': 120
+            'おがくず酵素風呂温浴＋メディカルチネイザン': 120,
+            'おがくず酵素風呂温浴＋オイルリンパマッサージ': 120,
+            'おがくず酵素風呂温浴＋WINBACK施術': 120,
+            'おがくず酵素風呂温浴＋ヨガ': 120,
+            'おがくず酵素風呂温浴＋TRXサスペンショントレーニング': 120
         };
 
         let selectedMenuTime = 0;
