--- a/index.html
+++ b/index.html
@@ -661,6 +661,57 @@
 .sort-buttons button[aria-pressed="true"]{
   border-color:#ab83e6; color:#6d42d3; background:#f8f5ff;
 }
+
+/* 検索ボックスの高さを控えめに */
+.select-tools input{
+  flex: 1;
+  padding: 6px 10px;     /* ← 8px → 6px にして低く */
+  font-size: 14px;       /* ← 16px → 14px 程度に */
+  line-height: 1.2;      
+  height: 34px;          /* 明示指定（お好みで 32–36px） */
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-sizing: border-box; /* パディング込みで高さ計算 */
+}
+
+/* 並び替えボタンも少しだけ低めに揃える（任意） */
+.sort-buttons button{
+  padding: 4px 8px;
+  font-size: 13px;
+  height: 32px;          /* 任意：見た目を合わせる */
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  background: #fff;
+  cursor: pointer;
+}
+
+/* 検索ボックスをさらに低く（iOSのズーム回避で font-size は16pxのまま） */
+#customerSearch{
+  -webkit-appearance: none;
+  appearance: none;
+  height: 30px;           /* お好みで 28〜32px に */
+  padding: 2px 10px;      /* 縦の余白を小さく */
+  font-size: 16px;        /* iOSでのズーム防止 */
+  line-height: 26px;      /* 文字の縦位置を中央に */
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-sizing: border-box;
+  min-height: 0;          /* Safariの最小高さ対策 */
+}
+
+/* さらに攻めて低くしたい場合（超コンパクト版） */
+@media (pointer: fine){
+  #customerSearch.compact{
+    height: 26px;         /* 26pxまで圧縮 */
+    line-height: 22px;
+    padding: 2px 8px;
+  }
+}
+#customerSearch{
+  display: block;
+  margin-top: 19px;  /* 好みで調整 */
+}
+
     </style>
 </head>
 
