--- a/index.html
+++ b/index.html
@@ -224,10 +224,6 @@ img{border:1px solid var(--line) !important;border-radius:6px}
   </style>
 </head>
 <body>
-  <!-- 右側の追従ナビ -->
-  <div class="side-nav" id="sideNav">
-    <a href="#section-submit"><span>⇩</span><i class="fas fa-comment"></i></a>
-  </div>
 
   <div class="container">
     <h1><span class="small-text">NEO LUXE</span><br>予約フォーム</h1>
@@ -278,7 +274,7 @@ img{border:1px solid var(--line) !important;border-radius:6px}
       </div>
       <div class="labelContent">🔸 オプション項目</div>
       <div class="options">
-        <button type="button" onclick="toggleOption(this,'衣装チェンジ【レオナール、アルミラージは衣装チェンジ込み】')">衣装チェンジ【レオナール、アルミラージは衣装チェンジ込み】</button>
+        <button type="button" onclick="toggleOption(this,'衣装チェンジ【レオナール、アルミラージは衣装チェンジ込み】')">衣装チェンジ<br>【レオナール、アルミラージは衣装チェンジ込み】</button>
         <button type="button" onclick="toggleOption(this,'高級オイル増量施術【スタンダードのみ】')">高級オイル増量施術【スタンダードのみ】</button>
         <button type="button" onclick="toggleOption(this,'集中トリートメント')">集中トリートメント</button>
         <button type="button" onclick="toggleOption(this,'ヘッドスパ')">ヘッドスパ</button>
