--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@ img{border:1px solid var(--line) !important;border-radius:6px}
       </div>
       <div class="labelContent">🔸 オプション項目</div>
       <div class="options">
-        <button type="button" onclick="toggleOption(this,'トロリッチオイルドバドバ贅沢施術【レオナールのみ】')">トロリッチオイルドバドバ贅沢施術【レオナールのみ】</button>
+        <button type="button" onclick="toggleOption(this,'トロリッチオイルドバドバ贅沢施術【レオナールのみ】')">トロリッチオイルドバドバ贅沢施術<br>【レオナールのみ】</button>
         <button type="button" onclick="toggleOption(this,'トロリッチオイル増量施術【レオナールのみ】')">トロリッチオイル増量施術【レオナールのみ】</button>
         <button type="button" onclick="toggleOption(this,'集中トリートメント')">集中トリートメント</button>
         <button type="button" onclick="toggleOption(this,'ヘッドスパ')">ヘッドスパ</button>
